Refactored Transfer related classes